--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -219,8 +219,7 @@
       {% endif %}
 
       <footer class="page-footer">
-        <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
-        <p class="footer-line">If this is your live resume, you can modify or remove this part. ;-)</p>
+        <p class="footer-line">Made by <a href="http://twitter.com/SkullTech">@SkullTech</a>. Fork me on <a href="https://github.com/SkullTech">GitHub</a>.</p>
       </footer>
 
     </div>
