--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -95,7 +95,7 @@
         </header>
         <ul>
         {% for course in site.data.courses %}
-            <li class="resume-item" itemprop="course">{{ course }}</li>
+            <li>{{ course }}</li>
         {% endfor %}
         </ul>
         <p class="resume-item-details">
