Fix text in the courses section

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -104,7 +104,7 @@
             <li>{{ course }}</li>
         {% endfor %}
         </ul>
-        <p class="resume-item-details">
+        <p class="resume-item-copy">
           *Will be completed by Summer 2018<br>
           ^Online course (MOOC)
         </p>
