Testing the revamped projects section

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -123,7 +123,13 @@
         <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
           <meta itemprop="creator" content="{{ site.resume_name }}" itemtype="http://schema.org/Person" />
           <h3 class="resume-item-title" itemprop="name">{% if project.url %}<a href="{{ project.url }}" itemprop="url">{{ project.project }}</a>{% else %}{{ project.project }}{% endif %}</h3>
-          <h4 class="resume-item-details" itemprop="description">{{ project.role }}  &bull; {{ project.duration }}</h4>
+          <h4 class="resume-item-details" itemprop="description">{{ project.mentor }}  &bull; {{ project.duration }}</h4>
+          <p class="resume-item-copy">
+            <ul class="resume-item-list">
+              {% for tech in project.technologies %}
+              <li>{{ tech }}</li>
+              {% endfor %}
+            </ul></h5>
           <p class="resume-item-copy">{{ project.description }}</p>
         </div>
         {% endfor %}
