--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -132,9 +132,15 @@
             </ul></h5>
           <p class="resume-item-copy">{{ project.description }}</p>
           {% if project.subprojects %}
-          {% for sub in project.subprojects %}
-          <h4 class="resume-item-details">{{ sub.name }}</h4>
-          <p class="resume-item-copy">{{ sub.description }}</p>
+          <div class="resume-item">
+          <ul class="resume-item-list">
+          {% for sub in project.subprojects %}  
+          <li>
+            <div class="resume-item">
+              <h4 class="resume-item-details">{{ sub.name }}</h4>
+              <p class="resume-item-copy">{{ sub.description }}</p>
+            </div>
+          </li>
           {% endfor %}
           {% endif %}
         </div>
