--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -137,7 +137,7 @@
           {% for sub in project.subprojects %}  
           <li>
             <div class="resume-item">
-              <h4 class="resume-item-details">{{ sub.name }}</h4> &mdash; {{ sub.description }}
+              <h4>{{ sub.name }}</h4> &mdash; {{ sub.description }}
             </div>
           </li>
           {% endfor %}
