--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -136,7 +136,7 @@
           <ul class="resume-item-list">
           {% for sub in project.subprojects %}  
           <li>
-            <div class="resume-item">
+            <div>
               <h4>{{ sub.name }}</h4> &mdash; {{ sub.description }}
             </div>
           </li>
