--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -137,7 +137,7 @@
           {% for sub in project.subprojects %}  
           <li>
             <div>
-              <h4>{{ sub.name }}</h4> &mdash; {{ sub.description }}
+              <strong>{{ sub.name }}</strong> &mdash; {{ sub.description }}
             </div>
           </li>
           {% endfor %}
