Make the skills smaller

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -161,7 +161,7 @@
         {% for skill in site.data.skills %}
         <div class="resume-item">
           <ul>
-          <li><h3 class="resume-item-details">{{ skill.skill }}</h3></li>
+          <li><strong class="resume-item-details">{{ skill.skill }}</strong>></li>
         </div>
         {% endfor %}
 
