Fix a typo and remove style from <strong>

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -161,7 +161,7 @@
         {% for skill in site.data.skills %}
         <div class="resume-item">
           <ul>
-          <li><strong class="resume-item-details">{{ skill.skill }}</strong>></li>
+          <li><strong>{{ skill.skill }}</strong></li>
         </div>
         {% endfor %}
 
