--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -20,11 +20,11 @@
         <h1 class="header-name" itemprop="name">{{ site.resume_name }}</h1>
 
         <!-- Contact buttons don't work in print, configure in the _config.yml file, remove "print-only" to display always. -->
-<!--         <div class="header-contact-info">
+        <div class="header-contact-info print-only">
           <p>{{ site.resume_header_contact_info }}</p>
         </div>
- -->
-        <div class="title-bar">
+
+        <div class="title-bar no-print">
 
           <!-- Your title is also defined in the _config.yml file -->
           <h2 class="header-title" itemprop="jobTitle">{{ site.resume_title }}</h2>
@@ -33,7 +33,7 @@
           {% include icon-links.html %}
         </div>
 
-        <div class="executive-summary no-print" itemprop="description">
+        <div class="executive-summary" itemprop="description">
           {{ site.resume_header_intro }}
         </div>
 
