Made the header-contact-info title-bar

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -20,7 +20,9 @@
         <h1 class="header-name" itemprop="name">{{ site.resume_name }}</h1>
 
         <!-- Contact buttons don't work in print, configure in the _config.yml file, remove "print-only" to display always. -->
-        <div class="header-contact-info print-only">
+        <!-- 
+        <div class="header-contact-info print-only"> -->
+        <div class="title-bar print-only">
           <p>{{ site.resume_header_contact_info }}</p>
         </div>
 
