Right-align email address

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -23,7 +23,7 @@
         <!-- 
         <div class="header-contact-info print-only"> -->
         <div class="title-bar print-only">
-          <p>{{ site.resume_header_contact_info }}</p>
+          {{ site.resume_header_contact_info }}
         </div>
 
         <div class="title-bar no-print">
