Expand skills section

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -167,7 +167,7 @@
         </header>
         <ul>
         {% for skill in site.data.skills %}
-          <li><strong>{{ skill.skill }}</strong></li>
+          <li><strong>{{ skill.skill }}</strong> : {{ skill.description }}</li>
         {% endfor %}
         </ul>
 
