--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -87,6 +87,8 @@
               <li>{{ award.award }}</li>
               {% endfor %}
             </ul></h5>
+
+
           <p class="resume-item-copy">{{ education.summary }}</p>
         </div>
         {% endfor %}
@@ -131,14 +133,7 @@
           <meta itemprop="creator" content="{{ site.resume_name }}" itemtype="http://schema.org/Person" />
           <h3 class="resume-item-title" itemprop="name">{% if project.url %}<a href="{{ project.url }}" itemprop="url">{{ project.project }}</a>{% else %}{{ project.project }}{% endif %}</h3>
           <h4 class="resume-item-details" itemprop="description">{% if project.mentor %}{{ project.mentor }} &bull; {% endif %}{{ project.tags }} &bull; {{ project.duration }}</h4>
-<!--           
-          <ul class="resume-item-list">
-              {% for tech in project.technologies %}
-              <li>{{ tech }}</li>
-              {% endfor %}
-          </ul>
-
-  -->         
+       
           {% if project.description %}
             <p class="resume-item-copy">{{ project.description }}</p>
           {% endif %}
@@ -272,12 +267,12 @@
       </section>
       <!-- end Print Social Links -->
       {% endif %}
-<!-- 
-      <footer class="page-footer">
+ 
+      <footer class="page-footer no-print">
         <p class="footer-line">Made by <a href="http://twitter.com/SkullTech">@SkullTech</a>. Fork me on <a href="https://github.com/SkullTech">GitHub</a>.</p>
       </footer>
 
--->    
+    
     </div>
 
   </body>
