Remove consulting from experience

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -267,10 +267,12 @@
       </section>
       <!-- end Print Social Links -->
       {% endif %}
- 
-      <footer class="page-footer no-print">
+      
+      <div class="no-print">
+      <footer class="page-footer">
         <p class="footer-line">Made by <a href="http://twitter.com/SkullTech">@SkullTech</a>. Fork me on <a href="https://github.com/SkullTech">GitHub</a>.</p>
       </footer>
+      </div>
 
     
     </div>
